--- a/package.json
+++ b/package.json
@@ -3,16 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node ./server/index.js --mode development",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mock": "json-server --c json-server.json db.json"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "antd": "^5.0.5",
+    "babel-plugin-import": "^1.13.5",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "jsonwebtoken": "^8.5.1",
+    "koa-jwt": "^4.0.3",
+    "koa-router": "^12.0.0",
+    "moment": "^2.29.4",
     "next": "13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "xlsx": "^0.18.5"
   }
 }
